--- a/src/admin/components/tabs/tab.module.scss
+++ b/src/admin/components/tabs/tab.module.scss
@@ -1,19 +1,58 @@
-.wrapper {
+.tabContent {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 12px;
+    border-radius: 6px;
+    cursor: pointer;
 }
-
-.wrapper {
+.tabContent {
+    .iconOpen {
+        transform: rotate(0);
+        transition: transform 0.5s ease;
+    }
+    &.is-activated {
+        background-color: #443df6;
+        .iconOpen {
+            transform: rotate(180deg);
+        }
+    }
+    
+}
+.wrapper{
+    &.parent-is-activated{
+        .tabChildren{
+            display: block !important;
+            opacity: 1;
+            visibility: visible;
+            
+        }
+        .iconOpen {
+            transform: rotate(180deg);
+        }
+    }
+}
+.tabContent {
     .tabLeft {
         .name {
-            font-size: 0.875rem;
+            font-size: 18px;
             font-weight: 500;
             color: white
         }
     }
 }
-
-.wrapper {
-    .tabRight {}
+.tabChildren{
+    display: none;
+    opacity: 0;
+    transition: all 0.5s ease;
+    visibility: hidden;
+}
+.wrapper{
+    .tabChildren{
+        padding-left: 10px;
+        .tabChildrenWrapper{
+            padding-left: 10px; 
+            border-left:1px solid #32383E
+        }
+    }
 }
