--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 * {
+  --color-admin: white;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -11,4 +12,23 @@ body {
 svg {
   width: 20px;
   height: 20px;
+}
+.fl{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.icon{
+    line-height: 100%;
+    
+}
+
+/* animation */
+@keyframes rotate180 {
+    0%{
+        transform: rotate(0);
+    }
+    100%{
+        transform: rotate(180deg);
+    }
 }
