--- a/src/index.css
+++ b/src/index.css
@@ -13,22 +13,59 @@ svg {
   width: 20px;
   height: 20px;
 }
-.fl{
-    display: flex;
-    align-items: center;
-    gap: 10px;
+.fl {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
-.icon{
-    line-height: 100%;
-    
+.icon {
+  line-height: 100%;
 }
 
+.line {
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+  margin: 10px 0;
+}
 /* animation */
 @keyframes rotate180 {
-    0%{
-        transform: rotate(0);
-    }
-    100%{
-        transform: rotate(180deg);
-    }
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
+}
+.container {
+  position: relative;
+}
+.backgroundOverLay {
+  position: absolute;
+  background-color: rgba(176, 176, 176, 0.8);
+  left: 0;
+  right: 0;
+}
+.isLoading:after {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  margin: -20px 0 0 -20px;
+  border: 6px solid rgba(255, 255, 255, 0.6);
+  border-radius: 50%;
+  border-top-color: #3498db;
+  animation: spin 1s linear infinite;
+  z-index: 10;
+}
+
+@keyframes spin {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
 }
