craete ui for product page and product creation page

--- a/src/admin/admin.module.scss
+++ b/src/admin/admin.module.scss
@@ -65,3 +65,15 @@
         align-items: center;
     }
 }
+
+.headerRight {
+    button {
+        font-weight: 550;
+        display: flex;
+        align-items: center;
+
+        span {
+            margin-top: 1px;
+        }
+    }
+}
