--- a/src/admin/components/tabs/tab.module.scss
+++ b/src/admin/components/tabs/tab.module.scss
@@ -6,32 +6,38 @@
     border-radius: 6px;
     cursor: pointer;
 }
+
 .tabContent {
     .iconOpen {
         transform: rotate(0);
         transition: transform 0.5s ease;
     }
+
     &.is-activated {
-        background-color: #443df6;
+        background-color: var(--color-title);
+
         .iconOpen {
             transform: rotate(180deg);
         }
     }
-    
+
 }
-.wrapper{
-    &.parent-is-activated{
-        .tabChildren{
+
+.wrapper {
+    &.parent-is-activated {
+        .tabChildren {
             display: block !important;
             opacity: 1;
             visibility: visible;
-            
+
         }
+
         .iconOpen {
             transform: rotate(180deg);
         }
     }
 }
+
 .tabContent {
     .tabLeft {
         .name {
@@ -41,18 +47,21 @@
         }
     }
 }
-.tabChildren{
+
+.tabChildren {
     display: none;
     opacity: 0;
     transition: all 0.5s ease;
     visibility: hidden;
 }
-.wrapper{
-    .tabChildren{
+
+.wrapper {
+    .tabChildren {
         padding-left: 10px;
-        .tabChildrenWrapper{
-            padding-left: 10px; 
-            border-left:1px solid #32383E
+
+        .tabChildrenWrapper {
+            padding-left: 10px;
+            border-left: 1px solid #32383E
         }
     }
 }
