--- a/src/index.css
+++ b/src/index.css
@@ -33,23 +33,9 @@ svg {
   margin: 10px 0;
 }
 
-.isLoading:after {
-  content: " ";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 40px;
-  height: 40px;
-  margin: -20px 0 0 -20px;
-  border: 6px solid rgba(255, 255, 255, 0.6);
-  border-radius: 50%;
-  border-top-color: #3498db;
-  animation: spin 1s linear infinite;
-  z-index: 10;
-}
-
 .container {
   padding: 40px;
+  width: 90vw;
 }
 
 .fieldset {
@@ -104,4 +90,33 @@ svg {
 .reactEasyCrop_CropArea {
   width: 100% !important;
   height: 100% !important;
+}
+.backgroundOverLay {
+  position: fixed;
+  background-color: rgba(235, 235, 235, 0.5);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  opacity: 0;
+  visibility: hidden;
+}
+.show_loading .backgroundOverLay {
+  opacity: 1;
+  visibility: visible;
+}
+.show_loading .backgroundOverLay .isLoading:after {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  margin: -20px 0 0 -20px;
+  border: 6px solid rgba(255, 255, 255, 0.6);
+  border-radius: 50%;
+  border-top-color: #3498db;
+  animation: spin 1s linear infinite;
+  z-index: 10;
 }
